--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -56,7 +56,7 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass ci_app:9000;
+        fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
