--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -15,7 +15,7 @@ server {
 
     # WebSocket
     location /ws {
-        proxy_pass http://ci_app:8080/ws;
+        proxy_pass http://app:8080/ws;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
