--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     volumes:
       - .:/var/www/html
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/app/www.conf:/usr/local/etc/php-fpm.d/www.conf
       - ./logs/nginx:/var/log/nginx
     depends_on:
       - app
