--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -15,7 +15,7 @@ server {
 
     # WebSocket
     location /ws {
-        proxy_pass http://app:8080/ws;
+        proxy_pass http://ci_app:84/ws;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -56,7 +56,7 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
+        fastcgi_pass ci_app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
