--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -39,4 +39,9 @@ COPY . .
 # Permissions
 RUN chown -R www-data:www-data /var/www/html && chmod -R 755 /var/www/html
 
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["tail", "-f", "/dev/null"]  # sementara supaya container tidak exit
+
 CMD ["/start.sh"]
